# apiserver/model_configuration.go
@@ -15,20 +15,8 @@ type Configuration struct {
 	// Internal identifier for the configured API (created automatically).
 	Id *int64 `json:"id,omitempty"`
 
-	// There should be things like API address, access keys and so on.
-	ApiAccessChangeMe string `json:"apiAccessChangeMe,omitempty"`
-
 	// Flag to enable or disable fetching from this API
 	Enable *bool `json:"enable,omitempty"`
-
-	// Interval in seconds for collecting data from API
-	RefreshInterval int32 `json:"refreshInterval,omitempty"`
-
-	// Timeout in seconds
-	RequestTimeout *int32 `json:"requestTimeout,omitempty"`
-
-	// Array of rules combined by logical OR
-	AssetFilter [][]FilterRule `json:"assetFilter,omitempty"`
 
 	// Set to `true` by the app when running and to `false` when app is stopped
 	Active *bool `json:"active,omitempty"`
@@ -42,9 +30,6 @@ type Configuration struct {
 
 // AssertConfigurationRequired checks if the required fields are not zero-ed
 func AssertConfigurationRequired(obj Configuration) error {
-	if err := AssertRecurseInterfaceRequired(obj.AssetFilter, AssertFilterRuleRequired); err != nil {
-		return err
-	}
 	return nil
 }
 
