# openapi.yaml
@@ -225,34 +225,11 @@ components:
           description: Internal identifier for the configured API (created automatically).
           readOnly: true
           nullable: true
-        apiAccessChangeMe:
-          type: string
-          format: string
-          description: There should be things like API address, access keys and so on.
-          example: 10.10.10.101
         enable:
           type: boolean
           description: Flag to enable or disable fetching from this API
           default: true
           nullable: true
-        refreshInterval:
-          type: integer
-          description: Interval in seconds for collecting data from API
-          default: 60
-        requestTimeout:
-          type: integer
-          description: Timeout in seconds
-          default: 120
-          nullable: true
-        assetFilter:
-          $ref: "#/components/schemas/AssetFilter"
-          nullable: true
-          example:
-            [
-              [{ "parameter": "deviceName", "regex": "Main.*" }, { "parameter": "deviceType", "regex": "110" }],
-              [{ "parameter": "macAddress", "regex": "(70:82:0e:12:28:cc|70:56:06:12:.*)" }],
-              [{ "parameter": "ipAddress", "regex": "192\\.168\\..*" }],
-            ]
         active:
           type: boolean
           readOnly: true
@@ -273,23 +250,3 @@ components:
           description: ID of the last Eliona user who created or updated the configuration
           nullable: true
           example: "90"
-
-    AssetFilter:
-      type: array
-      description: Array of rules combined by logical OR
-      items:
-        type: array
-        description: Array of rules combined by logical AND
-        items:
-          $ref: "#/components/schemas/FilterRule"
-
-    FilterRule:
-      type: object
-      description: Asset selection rule. Possible parameters are defined in app's README file.
-      properties:
-        parameter:
-          type: string
-          example: "name"
-        regex:
-          type: string
-          example: "^first_floor_.*$"
